tests/script_runtime_errors/bad_fold_type/error.txt
Error: 
    1 | for event of
    2 |   case (k,v) => [k, v]
      |        ^^^^^^ The binary operation `+` is not defined for the type `record` and `array`
    3 | into {} end;